Scrollbar fix
1

--- a/tag/Block.css
+++ b/tag/Block.css
@@ -21,8 +21,9 @@ time, mark, audio, video {
 html{background-image: url(https://ocnttum.if.ua/wp-content/uploads/2017/10/Fancy-Html-Page-Background-Color-88-On-Coloring-Site-with-Html-Page-Background-Color.jpg);
     font-family: roboto;
     height: 700px;
-    width: 1850px;
+    width: auto;
     margin: 20px;
+    max-width: 1850px;
 }
 header{text-align: center;font-size: 200%;
     margin-top: 25px}
