--- a/tag/tag.css
+++ b/tag/tag.css
@@ -20,8 +20,9 @@ time, mark, audio, video {
 }
 html{background-image: url(https://ocnttum.if.ua/wp-content/uploads/2017/10/Fancy-Html-Page-Background-Color-88-On-Coloring-Site-with-Html-Page-Background-Color.jpg);
     height: 700px;
-    width: 1850px;
+    width: auto;
     margin: 20px;
+    max-width: 1850px;
 }
 header{text-align: center;font-size: 200%;
 margin-top: 25px}
@@ -55,6 +56,7 @@ nav{
 ;}
 .item6 {display: inline-block;width: 16%;  font-size: x-large;text-align: center
 ;}
+
 .center{ padding-top: 25px;
     font-size:15px;
     padding-left: 15px;
